--- a/Network_flow/Network_flow/Network_flow.vcxproj
+++ b/Network_flow/Network_flow/Network_flow.vcxproj
@@ -138,8 +138,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="백준_완전중요한간선%285651%29.cpp" />
-    <ClCompile Include="Network_flow.cpp">
+    <ClCompile Include="백준_완전중요한간선%285651%29.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="백준_최대유량(6086).cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
