--- a/Network_flow/Network_flow/Network_flow.vcxproj.filters
+++ b/Network_flow/Network_flow/Network_flow.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Network_flow.cpp">
+    <ClCompile Include="백준_완전중요한간선%285651%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="백준_완전중요한간선%285651%29.cpp">
+    <ClCompile Include="백준_최대유량(6086).cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
