--- a/Mcmf/Mcmf/Mcmf.vcxproj.filters
+++ b/Mcmf/Mcmf/Mcmf.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="백준_열혈강호5(11408).cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="백준_제독(3640).cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="백준_책구매하기(11405).cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
